# agent-os

./: .gitignore  ADOPTION_REVIEW_PACKET.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  FILE_MANIFEST.md  FILE_MANIFEST_DETAILS_01.md  FOLDER_TREE.md  FOLDER_TREE_DETAILS_01.md  FOLDER_TREE_DETAILS_02.md  GITHUB_ADOPTION_ISSUE.md  GITHUB_PACKAGE_VALIDATION.md  GITHUB_UPLOAD_INSTRUCTIONS.md  MANUAL_UPLOAD_VALIDATION.md  OPEN_AND_UPLOAD_THIS.md  PHASE_B_SCOPE.md  README.md  README_FOR_GOVERNANCE_REVIEW.md  TESTING-QUICK-START.md  UPLOAD_THESE_FILES.md  VALIDATION_REPORT.md  VERSION.md  cloudbuild-pr-trigger.yaml  cloudbuild.yaml  pyproject.toml  pytest.ini  requirements-dev.txt
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
00_Governance/: README.md  agent-creation-policy.md  agent-inheritance-registry.md  agent-os-advisory-mode.md  agent-os-governance-v1-baseline.md  documentation-dependency-map.md  memory-rules.md  (+6 more)
08_Tooling/agent-memory-context-manager/: CONTEXT_BUDGET_POLICY.md  CONTEXT_USAGE_LOG_FORMAT.md  HANDOFF_PACKET_TEMPLATE.md  README.md  SCHEDULER_INTEGRATION_DESIGN.md  SUMMARY_CACHE_FORMAT.md  pyproject.toml
08_Tooling/agent-memory-context-manager/src/agent_memory_context_manager/: __init__.py  cache_key.py  handoff_packet.py  packet_summary.py  packet_validation.py  summary_cache.py  summary_cache_lookup.py  summary_cache_writer.py
08_Tooling/agent-memory-context-manager/tests/: test_cache_key.py  test_handoff_packet.py  test_packet_summary.py  test_packet_validation.py  test_summary_cache.py  test_summary_cache_lookup.py  test_summary_cache_writer.py
08_Tooling/dashboard-migration-verification/: .gitignore  README.md  pyproject.toml
08_Tooling/dashboard-migration-verification/config/: dashboards.example.yaml  dashboards.yaml  proposed_changes.schema.json
08_Tooling/dashboard-migration-verification/config/dashboard_registry/: coach_and_governance_dashboards.yaml  core_dashboards.yaml  operations_dashboards.yaml
08_Tooling/dashboard-migration-verification/config/schema/: proposed_change.definition.json  proposed_change.enums.json  proposed_changes.meta.json
08_Tooling/dashboard-migration-verification/docs/: agent_workflow.md  directory_structure.md  evidence_file_reference_config.md  evidence_file_reference_runtime.md  evidence_model.md  evidence_path_snapshot_example.md  workspace_commands.md  workspace_io.md
08_Tooling/dashboard-migration-verification/proposed_changes/: proposed_changes.example.yaml
08_Tooling/dashboard-migration-verification/scripts/: build_dependency_graph.py  dashboard_migration_common.py  snapshot_notion.py  validate_changes.py
08_Tooling/dashboard-migration-verification/templates/: validation_report.md
08_Tooling/dashboard-migration-verification/tests/: test_dependency_graph.py  test_snapshot_notion.py  test_validate_changes.py
08_Tooling/instructional-materials-coach/: .env.example  BUGS.md  CHANGELOG.md  README.md  pyproject.toml
08_Tooling/instructional-materials-coach/docs/: notion-field-mapping.md  safety.md
08_Tooling/instructional-materials-coach/reports/: README.md
08_Tooling/instructional-materials-coach/samples/: request-template.yaml  sample_lesson.yaml
08_Tooling/instructional-materials-coach/src/instructional_materials_coach/: cli.py  content_spec.py  docs_requests.py  drive_client.py  lesson_record.py  slides_requests.py  workspace_clients.py
08_Tooling/instructional-materials-coach/tests/: test_cli.py  test_content_spec.py  test_docs_requests.py  test_drive_client.py  test_lesson_record.py  test_slides_requests.py  test_workspace_clients.py
08_Tooling/notion-navigation-client/: .env.example  README.md  pyproject.toml
08_Tooling/notion-navigation-client/docs/: active-work-monitoring-rules.md  change-log.md  registry-fit.md  safety.md  search-playbook.md  source-registry.md  workspace-map.md
08_Tooling/notion-navigation-client/samples/: sample_tabs.json
08_Tooling/notion-navigation-client/src/notion_navigation_client/: __init__.py  cli.py  index.py  records.py  sheets_client.py
08_Tooling/notion-navigation-client/tests/: test_cli.py  test_index.py  test_records.py  test_sheets_client.py
08_Tooling/reusable-capability-registry/: README.md  pyproject.toml
08_Tooling/reusable-capability-registry/src/reusable_capability_registry/: __init__.py  cli.py  discovery.py  inspection.py  models.py  provenance.py  reader.py  serialization.py  validation.py  validation_cli.py  validator.py
08_Tooling/reusable-capability-registry/tests/: test_cli.py  test_discovery.py  test_models.py  test_provenance.py  test_pyyaml_compatibility.py  test_reader.py  test_serialization.py  test_validation.py  test_validation_cli.py  test_validation_inspection.py  test_validator.py
08_Tooling/reusable-capability-registry/tests/fixtures/: malformed_registry.yml  registry_100.yml  unsupported_registry.yml  valid_registry.yml
08_Tooling/reusable-capability-registry/tests/fixtures/provenance/: base.yml
08_Tooling/reusable-capability-registry/tests/fixtures/validation/repositories/clean/: test_clean.py
08_Tooling/reusable-capability-registry/tests/fixtures/validation/repositories/clean/02_Agent_Overlays/: integration-manager.md  qa-test-agent.md
08_Tooling/reusable-capability-registry/tests/fixtures/validation/repositories/clean/04_Registry/: agent-inheritance-registry.md  legacy-agent-alias-registry.md  responsibility-matrix.md  reusable-capabilities.yml
08_Tooling/reusable-capability-registry/tests/fixtures/validation/repositories/clean/src/cleanpkg/: consumer.py  core.py
(+607 files in other folders)
